feat: re-init project x2