@@ -1,45 +1,60 @@
 plugins {
-    id("java-platform")
-    id("io.quarkus") version "3.31.2" apply false
+    java
+    id("io.quarkus")
 }
 
-allprojects {
-    group = "com.nryanov.debezium.server.lake"
-    version = "0.1.0"
+group = "debezium-postgres2lake"
+version = "0.1.0"
 
-    repositories {
-        mavenCentral()
-        maven {
-            name = "Confluent"
-            url = uri("https://packages.confluent.io/maven/")
-        }
-    }
+repositories {
+    mavenCentral()
+    mavenLocal()
 }
 
 dependencies {
-    constraints {
-        api(platform(libs.debezium.server.bom))
-        api(platform(libs.debezium.bom))
-        api(platform(libs.iceberg.bom))
-        api(platform(libs.testcontainers.bom))
-    }
+    implementation(enforcedPlatform(libs.quarkus.platform))
+    implementation("io.quarkus.arc:arc")
+    implementation("io.quarkus:quarkus-core")
+
+    // Test dependencies
+    testImplementation(platform(libs.junit.bom))
+    testImplementation(platform(libs.testcontainers.bom))
 }
 
-subprojects {
-    apply(plugin = "java")
-    apply(plugin = "io.quarkus")
+java {
+    sourceCompatibility = JavaVersion.VERSION_21
+    targetCompatibility = JavaVersion.VERSION_21
+}
 
-    extensions.configure<JavaPluginExtension> {
-        toolchain {
-            languageVersion.set(JavaLanguageVersion.of(21))
-        }
-    }
+tasks.withType<JavaCompile>().configureEach {
+    options.encoding = "UTF-8"
+    options.compilerArgs.add("-parameters")
+}
 
-    tasks.withType<JavaCompile>().configureEach {
-        options.encoding = "UTF-8"
-    }
-
-    tasks.withType<Test> {
-        useJUnitPlatform()
-    }
+tasks.withType<Test>().configureEach {
+    useJUnitPlatform()
+    systemProperty("java.util.logging.manager", "org.jboss.logmanager.LogManager")
+    jvmArgs(
+        "--add-opens", "java.base/java.io=ALL-UNNAMED",
+        "--add-opens", "java.base/java.lang.invoke=ALL-UNNAMED",
+        "--add-opens", "java.base/java.lang.reflect=ALL-UNNAMED",
+        "--add-opens", "java.base/java.lang=ALL-UNNAMED",
+        "--add-opens", "java.base/java.math=ALL-UNNAMED",
+        "--add-opens", "java.base/java.net=ALL-UNNAMED",
+        "--add-opens", "java.base/java.nio=ALL-UNNAMED",
+        "--add-opens", "java.base/java.text=ALL-UNNAMED",
+        "--add-opens", "java.base/java.time=ALL-UNNAMED",
+        "--add-opens", "java.base/java.util.concurrent.atomic=ALL-UNNAMED",
+        "--add-opens", "java.base/java.util.concurrent=ALL-UNNAMED",
+        "--add-opens", "java.base/java.util.regex=ALL-UNNAMED",
+        "--add-opens", "java.base/java.util=ALL-UNNAMED",
+        "--add-opens", "java.base/jdk.internal.ref=ALL-UNNAMED",
+        "--add-opens", "java.base/jdk.internal.reflect=ALL-UNNAMED",
+        "--add-opens", "java.sql/java.sql=ALL-UNNAMED",
+        "--add-opens", "java.base/sun.util.calendar=ALL-UNNAMED",
+        "--add-opens", "java.base/sun.nio.ch=ALL-UNNAMED",
+        "--add-opens", "java.base/sun.nio.cs=ALL-UNNAMED",
+        "--add-opens", "java.base/sun.security.action=ALL-UNNAMED",
+        "-Djava.security.manager=allow"
+    )
 }
